# src/controllers/squareSentence.js
@@ -1,3 +1,6 @@
+import { insertSquareSentences } from "../models/squareSentence";
+import { getUserID, sendData, Status } from "../utils";
+
 /**
  * 获得广场上的书摘
  * @param {Context} ctx
@@ -11,7 +14,12 @@ export async function getSquareSenteces(ctx) {
  * @param {Context} ctx
  */
 export async function postSquareSentences(ctx) {
-
+    await insertSquareSentences(getUserID(ctx), ctx.paramData.body.sentence_num,
+                                ctx.paramData.body.thoughts,
+                                ctx.paramData.body.sentence_id1,
+                                ctx.paramData.body.sentence_id2,
+                                ctx.paramData.body.sentence_id3);
+    sendData(Status.OK, {});
 }
 
 /**
